--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,16 +61,21 @@ dev_dependencies:
 flutter:
   assets:
     - assets/logo.png
+    - assets/logo/isylsi_logo.png
   fonts:
     - family: Cinzel
       fonts:
         - asset: assets/fonts/Cinzel-Regular.ttf
         - asset: assets/fonts/Cinzel-Bold.ttf
           weight: 700
+    - family: IBMPlexMono
+      fonts:
+        - asset: assets/fonts/IBMPlexMono-Regular.ttf
     - family: Poppins
       fonts:
         - asset: assets/fonts/Poppins-Regular.ttf
         - asset: assets/fonts/Poppins-Bold.ttf
+        - asset: assets/fonts/Poppins-SemiBold.ttf
           weight: 700
 
   # The following line ensures that the Material Icons font is
