--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,10 @@ dependencies:
   provider: ^6.1.1
   lucide_icons: ^0.257.0
 
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
